<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:focusable="true" android:focusableInTouchMode="true" >
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	android:id="@+id/latestStoriesSection"
	    	android:visibility="gone">"
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/explore_lateststories"
		        android:textAppearance="@style/ExploreSectionAppearance"
		        android:layout_marginLeft="8dp" />
		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:id="@+id/latestStories">
	    	</LinearLayout>
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	android:id="@+id/nearbyStoriesSection"
	    	android:visibility="gone">
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/explore_nearbystories"
		        android:textAppearance="@style/ExploreSectionAppearance"
		        android:layout_marginLeft="8dp" />
       	    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/nothing_found_nearby"
		        android:id="@+id/nothingNearby"
		        android:textAppearance="@android:style/TextAppearance.Medium"
		        android:layout_marginLeft="8dp"
		        android:visibility="gone" />
	   	    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/show_on_the_map"
		        android:id="@+id/showNearbyMap"
		        android:textAppearance="@style/TagAppearance"
		        android:layout_marginLeft="8dp" />
		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:id="@+id/nearbyStories">
		    </LinearLayout>
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	android:id="@+id/tagsSection"
	    	android:visibility="gone">
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/explore_tags"
		        android:textAppearance="@style/ExploreSectionAppearance"
		        android:layout_marginLeft="8dp" />
		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:id="@+id/storyTags"
		        android:layout_marginLeft="8dp">
		        <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:id="@+id/storyPopularTagRows"
		            android:orientation="vertical">
		        </LinearLayout>
		    </LinearLayout>
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	android:id="@+id/searchSection"
	    	android:visibility="gone">
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/explore_search"
		        android:textAppearance="@style/ExploreSectionAppearance"
		        android:layout_marginLeft="8dp"
		        android:layout_marginTop="12dp" />
		    <EditText
		        android:id="@+id/searchField"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="text"
		        android:layout_marginLeft="8dp"
		        android:layout_marginRight="8dp" />
	    </LinearLayout>

    </LinearLayout>
	    
</ScrollView>